Edited wiki page through web user interface.

--- a/wiki/ElixirAPI.wiki
+++ b/wiki/ElixirAPI.wiki
@@ -9,8 +9,7 @@ Elixir fournit une suite de binding JavaScript pour les EFL. Mais celui-ci n'exp
 Tout d'abord, Elixir fournit un objet *elx* qui est le seul objet disponible lorsque le JavaScript est appelé. Cet objet a les propriétés suivantes :
 
  * `print(...)`: Affiche tous les paramètres sur la ligne de commande.
- * `sleep(s)`
-Bloque l'application pendant *s* secondes.
+ * `sleep(s)`: Bloque l'application pendant *s* secondes.
  * `usleep(ms)`: Bloque l'application pendant *ms* micro secondes.
  * `usid()`: Retourne une chaine de caractères unique qualifiant le JavaScript en cour d'exécution.
  * `gcid()`: Retourne une chaine de caractères unique qualifiant tous les JavaScript exécutés depuis le démarrage d' Elixir.
