Edited wiki page through web user interface.

--- a/wiki/ElixirAPI.wiki
+++ b/wiki/ElixirAPI.wiki
@@ -11,7 +11,7 @@ Tout d'abord, Elixir fournit un objet *elx* qui est le seul objet disponible lor
  * `print(...)`: Affiche tous les paramètres sur la ligne de commande.
  * `sleep(s)`: Bloque l'application pendant *s* secondes.
  * `usleep(ms)`: Bloque l'application pendant *ms* micro-secondes.
- * `usid()`: Retourne une chaine de caractères unique qualifiant le JavaScript en cour d'exécution.
+ * `usid()`: Retourne une chaine de caractères unique qualifiant le JavaScript en cours d'exécution.
  * `gcid()`: Retourne une chaine de caractères unique qualifiant tous les JavaScript exécutés depuis le démarrage d' Elixir.
  * `load(m)`: Charge le module *m*.
  * `unload(m)`: Décharge le module *m*.
