Edited wiki page through web user interface.

--- a/wiki/EdjeTutorial2.wiki
+++ b/wiki/EdjeTutorial2.wiki
@@ -87,7 +87,7 @@ part \
 }
 }}}
 
-Une macro se définit avec la directive `#define` suivi du nom de la macro puis des arguments. Chaque argument utilisé dans la macro sera remplacé par sa valeur qu’on passera lors de l’appel à cette macro. Dans notre exemple, on passe en paramètre les éléments des _part_ qui changent entre les différents carrés. On a d’abord le nom (on ajoute simplement l’argument à la chaîne « _rect`_`anim_ » name: « _rect`_`anim_ »_part`_`name_;), puis les 3 valeurs R, V et B pour choisir la couleur de départ de l’animation (cela va permettre de varier l’animation entre les différents carrés), puis viennent les positions relatives des carrés. D’abord pour l’état « _default_ » où l’élément est caché, puis pour l’état « _visible_ ». On utilise un positionnement relatif à la place des valeurs en pixels pour que les carrés gardent les même proportions et se redimensionnent automatiquement aux valeurs du _group_.
+Une macro se définit avec la directive `#define` suivi du nom de la macro puis des arguments. Chaque argument utilisé dans la macro sera remplacé par sa valeur qu’on passera lors de l’appel à cette macro. Dans notre exemple, on passe en paramètres les éléments des _part_ qui changent entre les différents carrés. On a d’abord le nom (on ajoute simplement l’argument à la chaîne « _rect`_`anim_ » name: « _rect`_`anim_ »_part`_`name_;), puis les 3 valeurs R, V et B pour choisir la couleur de départ de l’animation (cela va permettre de varier l’animation entre les différents carrés), puis viennent les positions relatives des carrés. D’abord pour l’état « _default_ » où l’élément est caché, puis pour l’état « _visible_ ». On utilise un positionnement relatif à la place des valeurs en pixels pour que les carrés gardent les même proportions et se redimensionnent automatiquement aux valeurs du _group_.
 
 Un deuxième élément Edje est ajouté à chaque carré, il s’agit de l’image de fond qui est clipé au carré. Pour cette effet, on aurait très bien pu découper l’image de fond dans The Gimp et ajouter tous ces morceaux d’images dans le projet. Utiliser des clips avec l’image de fond (qui est déjà intégré au projet) permet de limiter la taille du fichier EDJ final et s'avère donc préférable.
 
